# FastAPI_TDD

./: .env_example  .gitignore  README.md  pyproject.toml
project/app/: config.py  main.py
