[tool.poetry]
authors = ["Arjun KayalMoni <arjun.umathanu@gmail.com>"]
description = "Text Summaries"
name = "text_summaries_services"
version = "0.1.0"

[tool.poetry.dependencies]
fastapi = "^0.72.0"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
python = "^3.10"
uvicorn = "^0.17.0"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
